crates/musli/tests/ui/untagged_enum_error.stderr
error: An enum cannot be #[musli(packed)]
 --> tests/ui/untagged_enum_error.rs:4:9
  |
4 | #[musli(packed)]
  |         ^^^^^^
